# apps/fastify/api/menu/swagger.yaml
@@ -12,6 +12,11 @@ paths:
         - schema:
             type: string
           in: query
+          name: project
+          required: false
+        - schema:
+            type: string
+          in: query
           name: parentId
           required: false
         - schema:
@@ -27,6 +32,7 @@ paths:
           description: Default Response
     post:
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -45,12 +51,10 @@ paths:
                   type: string
                 order:
                   type: integer
+                project:
+                  type: string
                 parentId:
                   type: string
-        required: true
-      responses: {}
-  /api/menus/root:
-    get:
       responses:
         '200':
           description: Default Response
@@ -62,9 +66,12 @@ paths:
           in: path
           name: id
           required: true
-      responses: {}
+      responses:
+        '200':
+          description: Default Response
     put:
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -80,6 +87,8 @@ paths:
                   type: string
                 order:
                   type: integer
+                project:
+                  type: string
                 parentId:
                   type: string
       parameters:
@@ -88,7 +97,9 @@ paths:
           in: path
           name: id
           required: true
-      responses: {}
+      responses:
+        '200':
+          description: Default Response
     delete:
       parameters:
         - schema:
@@ -96,7 +107,9 @@ paths:
           in: path
           name: id
           required: true
-      responses: {}
+      responses:
+        '200':
+          description: Default Response
   /api/menus/{id}/children:
     get:
       parameters:
@@ -105,6 +118,8 @@ paths:
           in: path
           name: id
           required: true
-      responses: {}
+      responses:
+        '200':
+          description: Default Response
 servers:
   - url: http://localhost:3000
